Fix alignment issues

--- a/src/css/Dropdown.css
+++ b/src/css/Dropdown.css
@@ -1,12 +1,17 @@
 .dropdown {
-    @apply relative
+    anchor-scope: all;
+    anchor-name: --dropdown-anchor;
 }
 
 .dropdown-content {
-    @apply hidden absolute border top-full z-1 border border-fg4 p-4 rounded-lg bg-bg_h shadow-lg;
+    @apply hidden fixed border z-1 border border-fg4 p-4 rounded-lg bg-bg_h shadow-lg;
 
-    position-area: bottom;
-    position-try: top right left bottom;
+    position-anchor: --dropdown-anchor;
+    top: anchor(bottom);
+    left: anchor(left);
+    position-area: bottom right;
+    position-try: right;
+    position-try-fallbacks: flip-block;
 }
 
 .dropdown:hover .dropdown-content {
